# test_b_w_g

./: .env  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 2024_02_01_0110-dda02c40c3af_create_pairs_table.py  ada1da55a1e4.py
binance_async/: binance_api.py
core/: cache.py  celery_app.py  database.py  logs.py  metics.py
db/: base.py
dto/: courses.py  pair.py
kafka_server/consumers/: save_db.py
kafka_server/producer_binance/: binance_api.py
kafka_server/tasks/: save_db.py
models/: pairs.py
nats_server/producer_binance/: binance_api.py
nats_server/tasks/: save_db.py
routers/: exchange.py
routers/exchange/: exchange.py  helper.py  queries.py  tasks.py
tasks/: save_db.py
tests/: locustfile.py
web_tools/: binance_socket.py  getter_url.py
