[tool.poetry]
name = "test-b-w-g"
version = "0.1.0"
description = ""
authors = ["eugene <kerambit12323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.25"
ccxt = "^4.2.35"
websocket-client = "^1.7.0"
aiohttp = "^3.9.3"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
nats-py = "^2.7.0"
aioredis = "^2.0.1"
uvicorn = "^0.27.0.post1"
aiomultiprocess = "^0.9.0"
websockets = "^12.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
influxdb = "^5.3.1"
prometheus-fastapi-instrumentator = "^6.1.0"
influxdb-client = {extras = ["ciso"], version = "^1.40.0"}
prometheus-client = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
